# gha-ci-notebook-checks

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  notebook-qa.yml
process-notebooks/checkers/: data_source_checker.py  figure_checker.py  metadata_checker.py  qa_config.py  utils.py  write_gha_config.py
