[project]
name = "gha-ci-notebook-checks"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.14.3",
    "click>=8.3.2,<8.4",  # pynblint/typer breaks with click>=8.2
    "lxml==6.0.2",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pynblint==0.1.6",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "ruff==0.15.9",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
